@@ -43,6 +43,7 @@ import org.opensearch.script.ScriptService;
 import org.opensearch.telemetry.tracing.Tracer;
 import org.opensearch.threadpool.ExecutorBuilder;
 import org.opensearch.threadpool.ThreadPool;
+import org.opensearch.transport.AuxTransport;
 import org.opensearch.transport.Transport;
 import org.opensearch.transport.client.Client;
 import org.opensearch.watcher.ResourceWatcherService;
@@ -114,7 +115,7 @@ public class FlightStreamPlugin extends Plugin
         flightService.setClusterService(clusterService);
         flightService.setThreadPool(threadPool);
         flightService.setClient(client);
-        return List.of(flightService);
+        return Collections.emptyList();
     }
 
     /**
@@ -170,7 +171,7 @@ public class FlightStreamPlugin extends Plugin
             return Collections.emptyMap();
         }
         flightService.setNetworkService(networkService);
-        return Collections.singletonMap(FlightService.AUX_TRANSPORT_TYPES_KEY, () -> flightService);
+        return Collections.singletonMap(flightService.settingKey(), () -> flightService);
     }
 
     /**
